--- a/app/views/member/home/new.html.slim
+++ b/app/views/member/home/new.html.slim
@@ -6,8 +6,13 @@ section#new
                 = image_tag 'Cash.png'
                 h1 Comprar Tickets
             p Escolha a quantidade
+        .lottery-selected 
+            h2 = @lottery.event 
+            p = 'Código do Sorteio: ' + @lottery.id.to_s
+            p = 'Data do Sorteio: ' + @lottery.date_event.strftime('%d/%m/%Y')
     
     .container-fluid  
+        
         .row  
             /= form_with(model: [@lottery, @member], url: member_lottery_tickets_path(id: @lottery.id), method: :post) do |form|
             = form_with(model: [@lottery, @member], url: member_validar_pagamento_path(id: @lottery.id), method: :post) do |form|
