--- a/app/assets/stylesheets/frontend/pages/home.sass
+++ b/app/assets/stylesheets/frontend/pages/home.sass
@@ -1,3 +1,55 @@
+.modal 
+    display: none
+    justify-content: center
+    align-items: center
+    position: fixed
+    z-index: 1
+    left: 0
+    top: 0
+    width: 100%
+    height: 100%
+    overflow: auto
+    background-color: rgb(0,0,0)
+    background-color: rgba(0,0,0,0.4)
+    padding-top: 60px
+    z-index: 2
+
+
+/* Conteúdo do modal */
+.modal-content 
+    background-color: #fefefe
+    border: 1px solid #888
+    width: 400px
+    display: flex
+    justify-content: center
+    .sorteio-actions
+        flex-direction: column
+        padding: 30px
+        display: flex
+        align-items: center
+
+
+.openModal
+    background-color: #17a700 
+
+/* O botão de fechar */
+.close 
+    color: #aaa
+    float: right
+    font-size: 28px
+    font-weight: bold
+    margin: 5px 10px
+    position: absolute
+    right: 0
+
+
+.close:hover,
+.close:focus 
+    color: black
+    text-decoration: none
+    cursor: pointer
+
+
 .user_active 
     margin: 0
 
@@ -12,6 +64,12 @@
 
 .user-info-container
     display: flex
+
+.navbar-options
+    a
+        color: white
+        font-size: 11pt
+        margin-left: 5px
 
 .logo 
     display: flex
