--- a/app/views/frontend/public/purchase.html.slim
+++ b/app/views/frontend/public/purchase.html.slim
@@ -8,6 +8,17 @@ html
     = javascript_include_tag 'application'
 
   body
+    .container-fluid   
+        .home-title 
+            div
+                = image_tag 'Cash.png'
+                h1 Comprar Tickets
+            p Escolha a quantidade
+        .lottery-selected 
+            h2 = @lottery.event 
+            p = 'Código do Sorteio: ' + @lottery.id.to_s
+            p = 'Data do Sorteio: ' + @lottery.date_event.strftime('%d/%m/%Y')
+  
     = form_with(model: [@lottery], url: validar_pagamento_publico_path(id: @lottery.id), method: :post, id: 'lottery-form') do |form|
        .container-sorteio
           .new-sorteio-column.col-xs-6.col-md-6.col-lg-4
@@ -28,58 +39,65 @@ html
                 = form.label :quantity, "Quantidade de Números"
                 .sorteio-actions 
                     = form.button '-', type: 'button', class: 'action-buttons button-add-numbers', decrement: 1  
-                    = form.number_field :quantity, min: 1, max: @lottery.ticket - contar_numeros(Member.where("tickets->>:lottery_id IS NOT NULL", lottery_id: @lottery.id.to_s), @lottery.id), step: 1, class: 'new-sorteio-input', id: 'quantity-sorteio', value: 0         
+                    = form.number_field :quantity, min: 1, max: @lottery.ticket - contar_numeros(Member.where("tickets->>:lottery_id IS NOT NULL", lottery_id: @lottery.id.to_s), @lottery.id), step: 1, class: 'new-sorteio-input', id: 'quantity-sorteio', value: 0, readonly: true       
                     = form.button '+', type: 'button', class: 'action-buttons button-add-numbers', increment: 1
-          
-                = form.label :phone, "Telefone"
-                .sorteio-actions
-                  = form.text_field :phone, id: 'phone-field'
-                .buttons-sorteio
-                  = form.button "Confirmar", class: 'new-sorteio-submit'
-                  = form.button 'Limpar', type: 'button', class: 'new-sorteio-submit button-clear-numbers'
+                .sorteio-actions                   
+                    button#openModal.new-sorteio-submit type="button" Abrir Modal
+                    = form.button 'Limpar', type: 'button', class: 'new-sorteio-submit button-clear-numbers'
+               
+                #myModal.modal
+                    .modal-content
+                        span.close &times;
+                        
+                        .sorteio-actions
+                            p Informe seu numero de telefone
+                            = form.text_field :phone, id: 'phone-field', class: 'new-sorteio-input'
+                            .buttons-sorteio
+                            = form.button "Confirmar", class: 'new-sorteio-submit'
+                            
 
-  javascript:
-    document.addEventListener('DOMContentLoaded', function() {
-      const form = document.getElementById('lottery-form');
-      const phoneField = document.getElementById('phone-field');
-      const clearButton = document.querySelector('.button-clear-numbers');
+    javascript:
+        document.addEventListener('DOMContentLoaded', function() {
+            const form = document.getElementById('lottery-form');
+            const phoneField = document.getElementById('phone-field');
+            const clearButton = document.querySelector('.button-clear-numbers');
 
-      // Função para obter o token CSRF do Rails
-      function getCsrfToken() {
-        return document.querySelector('meta[name="csrf-token"]').getAttribute('content');
-      }
+            // Função para obter o token CSRF do Rails
+            function getCsrfToken() {
+                return document.querySelector('meta[name="csrf-token"]').getAttribute('content');
+            }
 
-      form.addEventListener('submit', function(event) {
-        event.preventDefault();
-        const phone = phoneField.value;
+            form.addEventListener('submit', function(event) {
+                event.preventDefault();
+                const phone = phoneField.value;
 
-        fetch("#{url_for(controller: 'frontend/public', action: 'check_phone')}", {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-            'X-CSRF-Token': getCsrfToken()
-          },
-          body: JSON.stringify({ phone: phone })
-        })
-        .then(response => response.json())
-        .then(data => {
-          if (data.found) {
-            console.log(data)
-            alert(`Número de telefone encontrado: ${data.name}`);
-            form.action = "#{validar_pagamento_publico_path(id: @lottery.id)}?member_id=" + data.id;
-          } else {
-            alert('Número de telefone não encontrado, redirecionando para o formulário de cadastro.');
-            form.action = "#{new_member_registration_path}";
-            form.method = 'GET';
-          }
-          form.submit();
-        })
-        .catch(error => {
-          console.error('Erro:', error);
+                fetch("#{url_for(controller: 'frontend/public', action: 'check_phone')}", {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'X-CSRF-Token': getCsrfToken()
+                },
+                body: JSON.stringify({ phone: phone })
+                })
+                .then(response => response.json())
+                .then(data => {
+                if (data.found) {
+                    console.log(data)
+                    alert(`Número de telefone encontrado: ${data.name}`);
+                    form.action = "#{validar_pagamento_publico_path(id: @lottery.id)}?member_id=" + data.id;
+                } else {
+                    alert('Número de telefone não encontrado, redirecionando para o formulário de cadastro.');
+                    form.action = "#{new_member_registration_path}";
+                    form.method = 'GET';
+                }
+                form.submit();
+                })
+                .catch(error => {
+                console.error('Erro:', error);
+                });
+            });
+
+            clearButton.addEventListener('click', function() {
+                phoneField.value = '';
+            });
         });
-      });
-
-      clearButton.addEventListener('click', function() {
-        phoneField.value = '';
-      });
-    });
