--- a/app/views/frontend/public/pix.html.slim
+++ b/app/views/frontend/public/pix.html.slim
@@ -1,6 +1,7 @@
 input#payment_id(type="hidden" value="#{@id}")
 input#quantity(type="hidden" value="#{@numbers_count}")
 input#lottery_id(type="hidden" value="#{@lottery.id}")
+input#member_id(type="hidden" value="#{@member.id}")
 
 .pix-container 
     img[src="data:image/jpeg;base64,#{@qr_code_base64}" width="200" height="200"]
