--- a/app/views/layouts/frontend.html.slim
+++ b/app/views/layouts/frontend.html.slim
@@ -49,7 +49,7 @@ html lang="pt-BR"
                 a.nav-item-box href=""
                     =icon('fas', 'list-alt')
                     span Comunicados 
-                a.nav-item-box href=""
+                a.nav-item-box href="/meus-titulos"
                     =icon('fas', 'wallet')
                     span Meus Titulos 
                 a.nav-item-box href=""
