--- a/app/views/member/home/pix.html.slim
+++ b/app/views/member/home/pix.html.slim
@@ -2,7 +2,10 @@ input#payment_id(type="hidden" value="#{@id}")
 input#quantity(type="hidden" value="#{@numbers_count}")
 input#lottery_id(type="hidden" value="#{@lottery.id}")
 
-.pix-container 
+.pix-container
+    p = @lottery.event
+    p = @member.name
+    p Quantidade de cotas: #{@numbers_count}
     img[src="data:image/jpeg;base64,#{@qr_code_base64}" width="200" height="200"]
     .pix-copia
         label for="copiar" Copiar Hash:
