--- a/app/views/layouts/frontend.html.slim
+++ b/app/views/layouts/frontend.html.slim
@@ -11,6 +11,7 @@ html lang="pt-BR"
     = javascript_include_tag "frontend/application"
 
     script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-34824777-48" 
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js")
     javascript:
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
