--- a/app/views/layouts/frontend.html.slim
+++ b/app/views/layouts/frontend.html.slim
@@ -67,7 +67,12 @@ html lang="pt-BR"
                     span Entrar em Contato  
                 .actions-user  
                     .actions-links 
-                        = link_to 'Entrar', new_member_session_path, :method => :get
+                        - if member_signed_in?
+                            = link_to 'Editar', member_edit_password_path, :method => :get
+                            = link_to 'Sair', destroy_member_session_path, :method => :delete
+                        - else
+                            = link_to 'Entrar', new_member_session_path, :method => :get
+
         main.main
             = yield
     
