--- a/app/views/frontend/public/purchase.html.slim
+++ b/app/views/frontend/public/purchase.html.slim
@@ -75,7 +75,7 @@
                 if (data.found) {
                     console.log(data)
                     alert(`Número de telefone encontrado: ${data.name}`);
-                    form.action = "#{validar_pagamento_publico_path(id: @lottery.id)}&member_id=" + data.id;
+                    form.action = "#{validar_pagamento_publico_path(id: @lottery.id)}&member_id=pqwoeipqpasdkpaoskdqp6a5s4da654da8sd7a79we87qw879a8s7dq8w7eq98e7q98ew798as7d9q7we7q9we7q97e98d9f79e7rw97er98t7r9t87q87qwe7qw8e7q98we7q9w7r98w7t98wr&opk=q8we7q98we7q98e7qw98e7q97eq987eq98w7eq98w7eq98w7eq98we7qw7e&yek=" + data.id+"&yeekk=q9q87e9q87we9q8e79qw7e9q8ewq6a54dq8e7qa6s54da65s4dq8ew7";
                 } else {
                     alert('Número de telefone não encontrado, redirecionando para o formulário de cadastro.');
                     form.action = "#{new_member_registration_path}";
