--- a/app/views/frontend/public/meus_titulos.html.slim
+++ b/app/views/frontend/public/meus_titulos.html.slim
@@ -53,7 +53,7 @@ javascript:
                 form.action = "#{procurar_numeros_path}?asdqsffwerwrw112423eewer&fweriwiknqe&688=fsdqeqweasdqeqwe&qeqweqweqwe=q8e9q8798we9rew" +  encodeURIComponent(encryptedId)+"&yek="+data.id+"&aqe345wersdfqwesdfer=3423qw";
             } else {
                 alert('Número de telefone não encontrado, redirecionando para o formulário de cadastro.');
-                form.action = "#{new_member_registration_path}";
+                form.action = "#{new_member_path}";
                 form.method = 'GET';
             }
             form.submit();
