redução de migrations

--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -19,17 +19,17 @@
                 .text-success
                   = icon('fas', 'book')
               span.clear
-                span.h3.block.m-t-xs.text-success= @pages_count
-                small.text-muted.text-u-c Páginas
+                span.h3.block.m-t-xs.text-success= @lotteries_count
+                small.text-muted.text-u-c Campanhas
           .col-md-6.b-b.b-r
             .block.padder-v.hover href="#" 
               span.i-s.i-s-2x.pull-left.m-r-sm
                 .text-info
                   = icon('fas', 'sitemap')
               span.clear
-                span.h3.block.m-t-xs.text-info= @category_articles_count
-                small.text-muted.text-u-c Categoria de conteúdo
-          .col-md-6.b-b
+                span.h3.block.m-t-xs.text-info= @members_count
+                small.text-muted.text-u-c Clientes
+          /.col-md-6.b-b
             .block.padder-v.hover href="#" 
               span.i-s.i-s-2x.pull-left.m-r-sm
                 .text-primary
