--- a/app/assets/stylesheets/frontend/application.sass
+++ b/app/assets/stylesheets/frontend/application.sass
@@ -16,7 +16,103 @@
 
 
 //Pages
+
 @import "./layout"
 @import "./pages/login"
 @import "./pages/home"
 @import "./pages/pix"
+
+
+
+.my-lotteries-container
+    display: flex
+    justify-content: center
+    align-items: start
+    gap: 30px
+    flex-wrap: wrap
+    .my-lotteries-box
+        display: flex
+        justify-content: center
+        flex-direction: column
+        align-items: center
+        box-shadow: 0 0 2px
+        border-radius: 10px
+        padding: 20px
+        width: 350px
+        p
+            margin: 0
+        h3
+            font-weight: bold
+            color: black
+
+        ul
+            display: flex
+            list-style-type: none
+            gap: 10px
+            margin-top: 10px
+            margin-bottom: 20px
+        li
+            background: #17a700
+            color: white
+            padding: 5px
+            border-radius: 50%
+            display: flex
+            justify-content: center
+            align-items: center
+            p 
+                background-color: #17a700
+                border: 2px double #f4d275
+                border-radius: 50%
+                width: 35px
+                height: 35px
+                text-align: center
+                display: flex
+                justify-content: center
+                align-items: center
+                color: white
+                font-weight: bold
+
+.lotteries-container
+    display: flex
+    flex-direction: column
+    align-items: center
+    gap: 30px
+    h3
+        text-align: center
+        color: black
+        font-weight: bold
+        margin-bottom: 0
+    > h3
+        margin-bottom: 30px
+    a
+        background-color: #17a700
+        color: white
+        padding: 10px 40px
+        border-radius: 10px
+
+.member-info
+    display: flex
+    justify-content: center
+    align-items: center
+    gap: 10px
+    text-align: center
+    h3
+        margin: 0
+        font-size: 14pt
+    p
+        margin: 0
+        font-size: 14pt
+
+.not-numbers
+    display: flex
+    justify-content: center
+    align-items: center
+    flex-direction: column
+    p
+        text-align: center
+    a
+        background-color: #17a700
+        padding: 5px 10px
+        color: white
+        border-radius: 10px
+        
