--- a/app/assets/stylesheets/frontend/pages/home.sass
+++ b/app/assets/stylesheets/frontend/pages/home.sass
@@ -278,6 +278,8 @@
     width: 100%
     cursor: pointer
     color: white
+    background-color: #059f01
+    border: none
     
     a
         width: 100%
@@ -469,7 +471,7 @@
 
 @media (max-width: 678px)
     .nav-item-box
-        border-top: 1px solid #008911
+        border-top: 1px solid #008911 !important
     .nav-item-box:first-child
         border-top: 0px solid #008911
     .nav-item-box:last-child
