--- a/app/views/layouts/frontend.html.slim
+++ b/app/views/layouts/frontend.html.slim
@@ -54,7 +54,7 @@ html lang="pt-BR"
                 a.nav-item-box href=""
                     =icon('fas', 'list-alt')
                     span Comunicados 
-                a.nav-item-box href="/meus-titulos"
+                button#openModalNumber.nav-item-box type="button"
                     =icon('fas', 'wallet')
                     span Meus Titulos 
                 a.nav-item-box href="/criar-conta"
@@ -77,6 +77,19 @@ html lang="pt-BR"
                         - else
                             = link_to 'Entrar', new_member_session_path, :method => :get
 
+        .new-sorteio-box
+            = form_with(url: "#", method: :post, id: 'lottery-form') do |form|
+                .new-sorteio               
+                    #myModalNumber.modal
+                        .modal-content
+                            span.close &times;
+                            
+                            .sorteio-actions
+                                p Informe seu numero de telefone
+                                = form.text_field :phone, id: 'phone-field', class: 'new-sorteio-input'
+                                .buttons-sorteio
+                                = form.button "Confirmar", class: 'new-sorteio-submit' 
+
         main.main
             = yield
     
@@ -90,4 +103,56 @@ html lang="pt-BR"
                         p = "Copyright © 2024 - Todos os direitos reservados."
 
             
-            
+javascript:
+    document.addEventListener('DOMContentLoaded', function() {
+        const form = document.getElementById('lottery-form');
+        const phoneField = document.getElementById('phone-field');
+        const clearButton = document.querySelector('.button-clear-numbers');
+
+        // Função para obter o token CSRF do Rails
+        function getCsrfToken() {
+            return document.querySelector('meta[name="csrf-token"]').getAttribute('content');
+        } 
+
+        // Função para criptografar o member_id
+        function encryptMemberId(memberId) {
+            const secretKey = 'be2a8ef602c991937ed1492ed48966f7'; // Chave secreta para criptografia
+            return CryptoJS.AES.encrypt(memberId.toString(), secretKey).toString();
+        }
+
+
+        form.addEventListener('submit', function(event) {
+            event.preventDefault();
+            const phone = phoneField.value;
+
+            fetch("#{url_for(controller: 'frontend/public', action: 'check_phone_numbers')}", {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+                'X-CSRF-Token': getCsrfToken()
+            },
+            body: JSON.stringify({ phone: phone })
+            })
+            .then(response => response.json())
+            .then(data => {
+            if (data.found) {
+                console.log(data)
+                alert(`Número de telefone encontrado: ${data.name}`);
+                const encryptedId = encryptMemberId(data.id);
+                form.action = "#{procurar_numeros_path}?asdqsffwerwrw112423eewer&fweriwiknqe&688=fsdqeqweasdqeqwe&qeqweqweqwe=q8e9q8798we9rew" +  encodeURIComponent(encryptedId)+"&yek="+data.id+"&aqe345wersdfqwesdfer=3423qw";
+            } else {
+                alert('Número de telefone não encontrado, redirecionando para o formulário de cadastro.');
+                form.action = "#{new_member_path}";
+                form.method = 'GET';
+            }
+            form.submit();
+            })
+            .catch(error => {
+            console.error('Erro:', error);
+            });
+        });
+
+        clearButton.addEventListener('click', function() {
+            phoneField.value = '';
+        });
+    });
