--- a/app/assets/stylesheets/frontend/application.sass
+++ b/app/assets/stylesheets/frontend/application.sass
@@ -17,10 +17,10 @@
 
 //Pages
 
-@import "./layout"
 @import "./pages/login"
 @import "./pages/home"
 @import "./pages/pix"
+@import "./layout"
 
 
 
@@ -38,6 +38,116 @@
         box-shadow: 0 0 2px
         border-radius: 10px
         padding: 20px
+        width: 350px
+        margin-bottom: 30px
+        p
+            margin: 0
+        h3
+            font-weight: bold
+            color: black
+
+        ul
+            display: flex
+            list-style-type: none
+            gap: 10px
+            margin-top: 10px
+            margin-bottom: 20px
+            flex-wrap: wrap
+            justify-content: center
+            overflow-x: auto
+            height: 130px
+            align-items: start
+        li
+            background: #17a700
+            color: white
+            padding: 5px
+            border-radius: 50%
+            display: flex
+            justify-content: center
+            align-items: center
+            p 
+                background-color: #17a700
+                border: 2px double #f4d275
+                border-radius: 50%
+                width: 50px
+                height: 50px
+                text-align: center
+                display: flex
+                justify-content: center
+                align-items: center
+                color: white
+                font-weight: bold
+                font-size: 13pt
+
+.lotteries-container
+    display: flex
+    flex-direction: column
+    align-items: center
+    gap: 30px
+    h3
+        text-align: center
+        color: black
+        font-weight: bold
+        margin-bottom: 0
+    > h3
+        margin-bottom: 30px
+    a
+        background-color: #17a700
+        color: white
+        padding: 10px 40px
+        border-radius: 10px
+
+.member-info
+    display: flex
+    justify-content: center
+    align-items: center
+    gap: 10px
+    flex-direction: column
+    > ul
+        background-color: #dddddd
+        border-radius: 10px
+        padding: 5px
+        list-style-type: none
+        border: 1px solid black
+        li
+            color: black
+            color: black
+            padding: 2px
+            font-size: 13pt
+    h3
+        margin: 0
+        font-size: 14pt
+        color: black
+        font-weight: bold
+    p
+        margin: 0
+        font-size: 14pt
+
+.not-numbers
+    display: flex
+    justify-content: center
+    align-items: center
+    flex-direction: column
+    p
+        text-align: center
+    a
+        background-color: #17a700
+        padding: 5px 10px
+        color: white
+        border-radius: 10px
+
+.my-numbers-container
+    display: flex
+    justify-content: center
+    align-items: start
+    gap: 30px
+    flex-wrap: wrap
+    .my-numbers-box
+        display: flex
+        justify-content: center
+        flex-direction: column
+        align-items: center
+        border-radius: 10px
         width: 350px
         p
             margin: 0
@@ -63,56 +173,11 @@
                 background-color: #17a700
                 border: 2px double #f4d275
                 border-radius: 50%
-                width: 35px
-                height: 35px
+                width: 70px
+                height: 70px
                 text-align: center
                 display: flex
                 justify-content: center
                 align-items: center
                 color: white
                 font-weight: bold
-
-.lotteries-container
-    display: flex
-    flex-direction: column
-    align-items: center
-    gap: 30px
-    h3
-        text-align: center
-        color: black
-        font-weight: bold
-        margin-bottom: 0
-    > h3
-        margin-bottom: 30px
-    a
-        background-color: #17a700
-        color: white
-        padding: 10px 40px
-        border-radius: 10px
-
-.member-info
-    display: flex
-    justify-content: center
-    align-items: center
-    gap: 10px
-    text-align: center
-    h3
-        margin: 0
-        font-size: 14pt
-    p
-        margin: 0
-        font-size: 14pt
-
-.not-numbers
-    display: flex
-    justify-content: center
-    align-items: center
-    flex-direction: column
-    p
-        text-align: center
-    a
-        background-color: #17a700
-        padding: 5px 10px
-        color: white
-        border-radius: 10px
-        
