--- a/app/assets/stylesheets/frontend/pages/home.sass
+++ b/app/assets/stylesheets/frontend/pages/home.sass
@@ -27,6 +27,12 @@
         padding: 30px
         display: flex
         align-items: center
+        input    
+            border: none
+            box-shadow: 0 0 5px
+            border-radius: 10px
+            padding: 5px
+  
 
 
 .openModal
