atualização das seeds e mudança na pagina do pix

--- a/app/assets/stylesheets/frontend/pages/pix.sass
+++ b/app/assets/stylesheets/frontend/pages/pix.sass
@@ -10,16 +10,26 @@
     display: flex
     align-items: center
     gap: 10px
+    margin-bottom: 30px
     label
         margin: 0
     input
         border: none
-        box-shadow: 0 0 5px black
-        border-radius: 10px
-        padding: 5px
+        border-radius: 0 10px 10px 0
+        padding: 8px
+        background-color: #dddddd
+    button
+        background-color: #17a700
+        position: relative
+        left: 10px
+        border: none
+        padding: 8px
+        border-radius: 10px 0 0 10px
+        color: white
 
+    
 #timer 
-    font-size: 2em
+    font-size: 4rem
     margin-bottom: 10px
     font-weight: bold
     color: black
