--- a/app/views/frontend/public/pix.html.slim
+++ b/app/views/frontend/public/pix.html.slim
@@ -11,8 +11,14 @@ input#member_id(type="hidden" value="#{@member.id}")
                 strong Evento: 
                 |  #{@lottery.event}
             li
-                strong Quantidade de cotas: 
+                strong Quantidade de Cotas: 
                 |  #{@numbers_count}
+            li 
+                strong Valor da Cota: 
+                |  #{number_to_currency(@lottery.price, unit: 'R$', precision: 2)}
+            li 
+                strong Valor Total: 
+                |  #{number_to_currency(@lottery.price * @numbers_count, unit: 'R$', precision: 2)}
    
     .member-info
         h3 Dados do Cliente
@@ -33,9 +39,16 @@ input#member_id(type="hidden" value="#{@member.id}")
                 strong Data e Hora:
                 |  #{Time.now.strftime("%d/%m/%Y %H:%M:%S")}
 
-    img[src="data:image/jpeg;base64,#{@qr_code_base64}" width="200" height="200"]
-    .pix-copia
-        label for="copiar" Copiar Hash:
-        input type="text" id="copiar" value=@qr_code readonly=true 
-
-    #timer 10:00
+    .member-info
+        span O pagamento expira em 10 min
+        #timer 10:00  
+        h3 QR Code
+        span Escanei o QR Code abaixo para efetuar o pagamento
+        img[src="data:image/jpeg;base64,#{@qr_code_base64}" width="200" height="200"]
+        h3 Pix Copia e Cola
+        span Copie o codigo do pix abaixo e realize o pagamento
+    .member-info
+        .pix-copia
+            button type="button" id="btn-copiar" Copiar
+            input type="text" id="copiar" value=@qr_code readonly=true
+        
