--- a/app/assets/stylesheets/frontend/application.sass
+++ b/app/assets/stylesheets/frontend/application.sass
@@ -96,8 +96,9 @@
         color: white
         padding: 10px 40px
         border-radius: 10px
+            
 
-.member-info
+.member-info  
     display: flex
     justify-content: center
     align-items: center
@@ -108,7 +109,8 @@
         border-radius: 10px
         padding: 5px
         list-style-type: none
-        border: 1px solid black
+        box-shadow: 0 0 3px
+
         li
             color: black
             color: black
@@ -162,9 +164,9 @@
             margin-top: 10px
             margin-bottom: 20px
         li
-            background: #17a700
+            background: #17a700 
+            padding: 5px    
             color: white
-            padding: 5px
             border-radius: 50%
             display: flex
             justify-content: center
