--- a/app/views/frontend/registrations/new_member_payment.html.slim
+++ b/app/views/frontend/registrations/new_member_payment.html.slim
@@ -9,6 +9,7 @@
         .input-box
           .text-i = icon('fas', 'envelope')
           = f.input_field :email, placeholder: 'Digite seu E-mail', required: true, autofocus: true, class: 'login-input'
+          span id="emailMessage"
           - if @member.errors.has_key?(:email)
             p.text-danger = @member.errors[:email].first
 
